--- a/index.html
+++ b/index.html
@@ -456,7 +456,7 @@
                     </a>
                 </li>
                 <li class="nav-item">
-                    <a href="/adicionar.html" class="nav-link ">
+                    <a href="adicionar.html" class="nav-link ">
                         <i class="fas fa-plus-circle"></i>
                         <span>Adicionar Produtos</span>
                     </a>
