--- a/index.html
+++ b/index.html
@@ -946,7 +946,830 @@ const tabelaTotalDeProdutos = {
       "rotation": 90,
       "products": {}
     },
-
+    {
+      "id": "10",
+      "type": "grande",
+      "x": 101,
+      "y": 323,
+      "rotation": 90,
+      "products": {}
+    },
+    {
+      "id": "11",
+      "type": "grande",
+      "x": 101,
+      "y": 221,
+      "rotation": 90,
+      "products": {}
+    },
+    {
+      "id": "12",
+      "type": "grande",
+      "x": 100,
+      "y": 120,
+      "rotation": 90,
+      "products": {}
+    },
+    {
+      "id": "13",
+      "type": "grande",
+      "x": 163,
+      "y": 626,
+      "rotation": 270,
+      "products": {}
+    },
+    {
+      "id": "14",
+      "type": "grande",
+      "x": 162,
+      "y": 525,
+      "rotation": 270,
+      "products": {}
+    },
+    {
+      "id": "15",
+      "type": "grande",
+      "x": 162,
+      "y": 423,
+      "rotation": 270,
+      "products": {}
+    },
+    {
+      "id": "16",
+      "type": "grande",
+      "x": 163,
+      "y": 322,
+      "rotation": 270,
+      "products": {}
+    },
+    {
+      "id": "17",
+      "type": "grande",
+      "x": 163,
+      "y": 220,
+      "rotation": 270,
+      "products": {}
+    },
+    {
+      "id": "18",
+      "type": "grande",
+      "x": 161,
+      "y": 119,
+      "rotation": 270,
+      "products": {}
+    },
+    {
+      "id": "19",
+      "type": "grande",
+      "x": 282,
+      "y": 626,
+      "rotation": 90,
+      "products": {}
+    },
+    {
+      "id": "20",
+      "type": "grande",
+      "x": 282,
+      "y": 525,
+      "rotation": 90,
+      "products": {}
+    },
+    {
+      "id": "21",
+      "type": "grande",
+      "x": 283,
+      "y": 424,
+      "rotation": 90,
+      "products": {}
+    },
+    {
+      "id": "22",
+      "type": "grande",
+      "x": 283,
+      "y": 323,
+      "rotation": 90,
+      "products": {}
+    },
+    {
+      "id": "23",
+      "type": "grande",
+      "x": 282,
+      "y": 222,
+      "rotation": 90,
+      "products": {}
+    },
+    {
+      "id": "24",
+      "type": "grande",
+      "x": 282,
+      "y": 121,
+      "rotation": 90,
+      "products": {}
+    },
+    {
+      "id": "25",
+      "type": "grande",
+      "x": 344,
+      "y": 626,
+      "rotation": 270,
+      "products": {}
+    },
+    {
+      "id": "26",
+      "type": "grande",
+      "x": 343,
+      "y": 525,
+      "rotation": 270,
+      "products": {}
+    },
+    {
+      "id": "27",
+      "type": "grande",
+      "x": 344,
+      "y": 424,
+      "rotation": 270,
+      "products": {}
+    },
+    {
+      "id": "28",
+      "type": "grande",
+      "x": 344,
+      "y": 323,
+      "rotation": 270,
+      "products": {}
+    },
+    {
+      "id": "29",
+      "type": "grande",
+      "x": 343,
+      "y": 222,
+      "rotation": 270,
+      "products": {}
+    },
+    {
+      "id": "30",
+      "type": "grande",
+      "x": 343,
+      "y": 120,
+      "rotation": 270,
+      "products": {}
+    },
+    {
+      "id": "31",
+      "type": "grande",
+      "x": 463,
+      "y": 21,
+      "rotation": 270,
+      "products": {}
+    },
+    {
+      "id": "32",
+      "type": "grande",
+      "x": 463,
+      "y": 123,
+      "rotation": 270,
+      "products": {}
+    },
+    {
+      "id": "33",
+      "type": "grande",
+      "x": 62,
+      "y": 0,
+      "rotation": 0,
+      "products": {}
+    },
+    {
+      "id": "34",
+      "type": "grande",
+      "x": 163,
+      "y": 0,
+      "rotation": 0,
+      "products": {}
+    },
+    {
+      "id": "35",
+      "type": "grande",
+      "x": 264,
+      "y": 0,
+      "rotation": 0,
+      "products": {}
+    },
+    {
+      "id": "36",
+      "type": "grande",
+      "x": 280,
+      "y": 780,
+      "rotation": 90,
+      "products": {}
+    },
+    {
+      "id": "37",
+      "type": "grande",
+      "x": 280,
+      "y": 881,
+      "rotation": 90,
+      "products": {}
+    },
+    {
+      "id": "38",
+      "type": "grande",
+      "x": 281,
+      "y": 982,
+      "rotation": 90,
+      "products": {}
+    },
+    {
+      "id": "39",
+      "type": "grande",
+      "x": 282,
+      "y": 1083,
+      "rotation": 90,
+      "products": {}
+    },
+    {
+      "id": "40",
+      "type": "grande",
+      "x": 343,
+      "y": 1083,
+      "rotation": 270,
+      "products": {}
+    },
+    {
+      "id": "41",
+      "type": "grande",
+      "x": 342,
+      "y": 982,
+      "rotation": 270,
+      "products": {}
+    },
+    {
+      "id": "42",
+      "type": "grande",
+      "x": 341,
+      "y": 881,
+      "rotation": 270,
+      "products": {}
+    },
+    {
+      "id": "43",
+      "type": "grande",
+      "x": 341,
+      "y": 780,
+      "rotation": 270,
+      "products": {}
+    },
+    {
+      "id": "44",
+      "type": "grande",
+      "x": 462,
+      "y": 706,
+      "rotation": 90,
+      "products": {}
+    },
+    {
+      "id": "45",
+      "type": "grande",
+      "x": 463,
+      "y": 808,
+      "rotation": 90,
+      "products": {}
+    },
+    {
+      "id": "46",
+      "type": "grande",
+      "x": 463,
+      "y": 909,
+      "rotation": 90,
+      "products": {}
+    },
+    {
+      "id": "47",
+      "type": "grande",
+      "x": 463,
+      "y": 1010,
+      "rotation": 90,
+      "products": {}
+    },
+    {
+      "id": "48",
+      "type": "grande",
+      "x": 464,
+      "y": 1111,
+      "rotation": 90,
+      "products": {}
+    },
+    {
+      "id": "49",
+      "type": "grande",
+      "x": 342,
+      "y": 1190,
+      "rotation": 90,
+      "products": {}
+    },
+    {
+      "id": "58",
+      "type": "pequeno",
+      "x": 11,
+      "y": 710,
+      "rotation": 270,
+      "products": {}
+    },
+    {
+      "id": "59",
+      "type": "pequeno",
+      "x": 11,
+      "y": 751,
+      "rotation": 270,
+      "products": {}
+    },
+    {
+      "id": "60",
+      "type": "pequeno",
+      "x": 11,
+      "y": 792,
+      "rotation": 270,
+      "products": {}
+    },
+    {
+      "id": "61",
+      "type": "pequeno",
+      "x": 10,
+      "y": 833,
+      "rotation": 270,
+      "products": {}
+    },
+    {
+      "id": "62",
+      "type": "pequeno",
+      "x": 11,
+      "y": 874,
+      "rotation": 270,
+      "products": {}
+    },
+    {
+      "id": "63",
+      "type": "pequeno",
+      "x": 10,
+      "y": 915,
+      "rotation": 270,
+      "products": {}
+    },
+    {
+      "id": "64",
+      "type": "pequeno",
+      "x": 11,
+      "y": 956,
+      "rotation": 270,
+      "products": {}
+    },
+    {
+      "id": "65",
+      "type": "pequeno",
+      "x": 10,
+      "y": 997,
+      "rotation": 270,
+      "products": {}
+    },
+    {
+      "id": "66",
+      "type": "pequeno",
+      "x": 10,
+      "y": 1038,
+      "rotation": 270,
+      "products": {}
+    },
+    {
+      "id": "67",
+      "type": "pequeno",
+      "x": 11,
+      "y": 1079,
+      "rotation": 270,
+      "products": {}
+    },
+    {
+      "id": "68",
+      "type": "pequeno",
+      "x": 11,
+      "y": 1120,
+      "rotation": 270,
+      "products": {}
+    },
+    {
+      "id": "69",
+      "type": "pequeno",
+      "x": 11,
+      "y": 1161,
+      "rotation": 270,
+      "products": {}
+    },
+    {
+      "id": "70",
+      "type": "pequeno",
+      "x": 11,
+      "y": 1202,
+      "rotation": 270,
+      "products": {}
+    },
+    {
+      "id": "71",
+      "type": "pequeno",
+      "x": 11,
+      "y": 1243,
+      "rotation": 270,
+      "products": {}
+    },
+    {
+      "id": "72",
+      "type": "pequeno",
+      "x": 11,
+      "y": 1284,
+      "rotation": 270,
+      "products": {}
+    },
+    {
+      "id": "73",
+      "type": "pequeno",
+      "x": 11,
+      "y": 1325,
+      "rotation": 270,
+      "products": {}
+    },
+    {
+      "id": "74",
+      "type": "pequeno",
+      "x": 11,
+      "y": 1366,
+      "rotation": 270,
+      "products": {}
+    },
+    {
+      "id": "75",
+      "type": "pequeno",
+      "x": 11,
+      "y": 1408,
+      "rotation": 270,
+      "products": {}
+    },
+    {
+      "id": "76",
+      "type": "pequeno",
+      "x": 12,
+      "y": 1450,
+      "rotation": 270,
+      "products": {}
+    },
+    {
+      "id": "77",
+      "type": "pequeno",
+      "x": 11,
+      "y": 1491,
+      "rotation": 270,
+      "products": {}
+    },
+    {
+      "id": "78",
+      "type": "pequeno",
+      "x": 11,
+      "y": 1532,
+      "rotation": 270,
+      "products": {}
+    },
+    {
+      "id": "79",
+      "type": "pequeno",
+      "x": 132,
+      "y": 1557,
+      "rotation": 90,
+      "products": {}
+    },
+    {
+      "id": "80",
+      "type": "pequeno",
+      "x": 132,
+      "y": 1515,
+      "rotation": 90,
+      "products": {}
+    },
+    {
+      "id": "81",
+      "type": "pequeno",
+      "x": 132,
+      "y": 1473,
+      "rotation": 90,
+      "products": {}
+    },
+    {
+      "id": "82",
+      "type": "pequeno",
+      "x": 132,
+      "y": 1431,
+      "rotation": 90,
+      "products": {}
+    },
+    {
+      "id": "83",
+      "type": "pequeno",
+      "x": 132,
+      "y": 1390,
+      "rotation": 90,
+      "products": {}
+    },
+    {
+      "id": "84",
+      "type": "pequeno",
+      "x": 132,
+      "y": 1349,
+      "rotation": 90,
+      "products": {}
+    },
+    {
+      "id": "85",
+      "type": "pequeno",
+      "x": 133,
+      "y": 1308,
+      "rotation": 90,
+      "products": {}
+    },
+    {
+      "id": "86",
+      "type": "pequeno",
+      "x": 133,
+      "y": 1267,
+      "rotation": 90,
+      "products": {}
+    },
+    {
+      "id": "87",
+      "type": "pequeno",
+      "x": 132,
+      "y": 1226,
+      "rotation": 90,
+      "products": {}
+    },
+    {
+      "id": "88",
+      "type": "pequeno",
+      "x": 132,
+      "y": 1184,
+      "rotation": 90,
+      "products": {}
+    },
+    {
+      "id": "89",
+      "type": "pequeno",
+      "x": 132,
+      "y": 1143,
+      "rotation": 90,
+      "products": {}
+    },
+    {
+      "id": "90",
+      "type": "pequeno",
+      "x": 132,
+      "y": 1102,
+      "rotation": 90,
+      "products": {}
+    },
+    {
+      "id": "91",
+      "type": "pequeno",
+      "x": 133,
+      "y": 1061,
+      "rotation": 90,
+      "products": {}
+    },
+    {
+      "id": "92",
+      "type": "pequeno",
+      "x": 131,
+      "y": 1020,
+      "rotation": 90,
+      "products": {}
+    },
+    {
+      "id": "93",
+      "type": "pequeno",
+      "x": 132,
+      "y": 979,
+      "rotation": 90,
+      "products": {}
+    },
+    {
+      "id": "94",
+      "type": "pequeno",
+      "x": 132,
+      "y": 938,
+      "rotation": 90,
+      "products": {}
+    },
+    {
+      "id": "95",
+      "type": "pequeno",
+      "x": 132,
+      "y": 897,
+      "rotation": 90,
+      "products": {}
+    },
+    {
+      "id": "96",
+      "type": "pequeno",
+      "x": 132,
+      "y": 856,
+      "rotation": 90,
+      "products": {}
+    },
+    {
+      "id": "97",
+      "type": "pequeno",
+      "x": 131.984375,
+      "y": 732.984375,
+      "rotation": 90,
+      "products": {}
+    },
+    {
+      "id": "98",
+      "type": "pequeno",
+      "x": 132,
+      "y": 774,
+      "rotation": 90,
+      "products": {}
+    },
+    {
+      "id": "99",
+      "type": "pequeno",
+      "x": 132,
+      "y": 815,
+      "rotation": 90,
+      "products": {}
+    },
+    {
+      "id": "100",
+      "type": "pequeno",
+      "x": 194,
+      "y": 733,
+      "rotation": 270,
+      "products": {}
+    },
+    {
+      "id": "101",
+      "type": "pequeno",
+      "x": 193,
+      "y": 775,
+      "rotation": 270,
+      "products": {}
+    },
+    {
+      "id": "102",
+      "type": "pequeno",
+      "x": 193,
+      "y": 816,
+      "rotation": 270,
+      "products": {}
+    },
+    {
+      "id": "103",
+      "type": "pequeno",
+      "x": 193,
+      "y": 857,
+      "rotation": 270,
+      "products": {}
+    },
+    {
+      "id": "104",
+      "type": "pequeno",
+      "x": 194,
+      "y": 898,
+      "rotation": 270,
+      "products": {}
+    },
+    {
+      "id": "105",
+      "type": "pequeno",
+      "x": 193,
+      "y": 939,
+      "rotation": 270,
+      "products": {}
+    },
+    {
+      "id": "106",
+      "type": "pequeno",
+      "x": 193,
+      "y": 980,
+      "rotation": 270,
+      "products": {}
+    },
+    {
+      "id": "107",
+      "type": "pequeno",
+      "x": 193,
+      "y": 1021,
+      "rotation": 270,
+      "products": {}
+    },
+    {
+      "id": "108",
+      "type": "pequeno",
+      "x": 194,
+      "y": 1062,
+      "rotation": 270,
+      "products": {}
+    },
+    {
+      "id": "109",
+      "type": "pequeno",
+      "x": 194,
+      "y": 1103,
+      "rotation": 270,
+      "products": {}
+    },
+    {
+      "id": "110",
+      "type": "pequeno",
+      "x": 193,
+      "y": 1144,
+      "rotation": 270,
+      "products": {}
+    },
+    {
+      "id": "111",
+      "type": "pequeno",
+      "x": 194,
+      "y": 1185,
+      "rotation": 270,
+      "products": {}
+    },
+    {
+      "id": "112",
+      "type": "pequeno",
+      "x": 193,
+      "y": 1226,
+      "rotation": 270,
+      "products": {}
+    },
+    {
+      "id": "113",
+      "type": "pequeno",
+      "x": 194,
+      "y": 1267,
+      "rotation": 270,
+      "products": {}
+    },
+    {
+      "id": "114",
+      "type": "pequeno",
+      "x": 195,
+      "y": 1308,
+      "rotation": 270,
+      "products": {}
+    },
+    {
+      "id": "115",
+      "type": "pequeno",
+      "x": 193,
+      "y": 1349,
+      "rotation": 270,
+      "products": {}
+    },
+    {
+      "id": "116",
+      "type": "pequeno",
+      "x": 193,
+      "y": 1390,
+      "rotation": 270,
+      "products": {}
+    },
+    {
+      "id": "117",
+      "type": "pequeno",
+      "x": 193,
+      "y": 1431,
+      "rotation": 270,
+      "products": {}
+    },
+    {
+      "id": "118",
+      "type": "pequeno",
+      "x": 194,
+      "y": 1472,
+      "rotation": 270,
+      "products": {}
+    },
+    {
+      "id": "119",
+      "type": "pequeno",
+      "x": 193,
+      "y": 1513,
+      "rotation": 270,
+      "products": {}
+    },
+    {
+      "id": "120",
+      "type": "pequeno",
+      "x": 193,
+      "y": 1554,
+      "rotation": 270,
+      "products": {}
+    }
   ]
 };
 
